See #170: updates to upload API to support channels publishing
